# linux-multiarch-asm

./: .gitignore  README.md  configure.sh  main.cpp  meson.build  stress_test  test.sh  tree.txt
architectures/arch/x86_64/oop-test/: meson.build
archive/: README.md  auto_generate_readme_files.sh  generate-nasm-meson.sh  meson.build
archive/examples/: README.md  meson.build
archive/examples/avx/: README.md  meson.build
archive/examples/avx/avx2_addArrays/: avx2_addArrays.asm  avx2_add_arrays.s  meson.build
archive/examples/avx/avx512_addArrays/: avx512_addArrays.asm  main.cpp  meson.build
archive/examples/basics/: README.md  meson.build
archive/examples/common-gateway-interface/: README.md
archive/examples/database/: README.md
archive/examples/ecc/: meson.build
archive/examples/networking/: meson.build
archive/examples/prng/: README.md  meson.build
archive/examples/python/: meson.build
archive/examples/qt/: meson.build
archive/examples/x11/: meson.build
archive/functions/: meson.build
archive/functions/convert.bytebcd2ascii/: README.md  meson.build
archive/functions/convert.bytebcd2bin/: meson.build
archive/functions/convert.bytebin2bcd/: meson.build
archive/functions/convert.bytebin2hexascii/: README.md  meson.build
archive/functions/convert.dwordbcd2ascii/: meson.build
archive/functions/convert.dwordbcd2bin/: meson.build
archive/functions/convert.dwordbin2bcd/: meson.build
archive/functions/convert.dwordbin2hexascii/: meson.build
archive/functions/convert.nibblebcd2ascii/: meson.build
archive/functions/convert.nibblebcd2bin/: meson.build
archive/functions/convert.nibblebin2bcd/: meson.build
archive/functions/convert.nibblebin2hexascii/: README.md  meson.build
archive/functions/convert.qwordbcd2ascii/: meson.build
archive/functions/convert.qwordbcd2bin/: meson.build
archive/functions/convert.qwordbin2bcd/: meson.build
archive/functions/convert.qwordbin2hexascii/: meson.build
archive/functions/convert.wordbcd2ascii/: README.md  meson.build
archive/functions/convert.wordbcd2bin/: meson.build
archive/functions/convert.wordbin2bcd/: meson.build
archive/functions/convert.wordbin2hexascii/: README.md  meson.build
archive/functions/convert_bytebin2bcd/: README.md
archive/functions/convert_dwordbcd2ascii/: README.md
archive/functions/convert_dwordbcd2bin/: README.md
archive/functions/convert_dwordbin2hexascii/: README.md
archive/functions/convert_nibblebcd2ascii/: README.md
archive/functions/convert_nibblebcd2bin/: README.md
archive/functions/convert_nibblebin2bcd/: README.md
archive/functions/convert_qwordbcd2ascii/: README.md
archive/functions/convert_qwordbin2hexascii/: README.md
archive/functions/datetime.daysinamonth/: meson.build
archive/functions/datetime.leapyear/: meson.build
archive/functions/datetime.quadrimester/: meson.build
archive/functions/datetime.semester/: meson.build
archive/functions/datetime.shiftedmonth/: meson.build
archive/functions/datetime.trimester/: README.md  meson.build
archive/functions/datetime.weekend/: README.md  meson.build
archive/functions/datetime_quadrimester/: README.md
archive/functions/string.switchcase/: README.md  meson.build
archive/functions/string.tolower/: README.md  meson.build
archive/functions/string.toupper/: meson.build
archive/functions/system..ftok/: meson.build
archive/functions/system.pagesize/: README.md  meson.build
archive/functions/system.sleep/: meson.build
archive/includes/: meson.build
archive/includes/asm-generic/: README.md
archive/includes/bits/: meson.build
archive/includes/cpu/: meson.build
archive/includes/mysql/: meson.build
archive/includes/nasmx/: README.md
archive/includes/postgresql/: meson.build
archive/includes/sys/: meson.build  stat.inc  termios.inc
archive/migration_scripts/: generate-nasm-meson.sh  generate_mesonbuild_files.sh  manual_commands_summary.txt  meson.build
archive/projects/: meson.build
archive/projects/agguro/: README.md  meson.build
archive/projects/bootcdrom/: meson.build
archive/projects/bubblesort/: README.md  meson.build
archive/projects/easter/: meson.build
archive/projects/extxterm/: meson.build
archive/projects/isatty/: meson.build
archive/projects/josephus-problem/: README.md  meson.build
archive/projects/keyfilter/: meson.build
archive/projects/modulo97/: README.md  meson.build
archive/snippets/: README.md  meson.build
archive/snippets/convert/: README.md  bcd2ascii_conv.asm  bcd2bin_conv.asm  bin2bcd_conv.asm  bin2hexascii_conv.asm  meson.build
archive/snippets/convert_dwordbin2bcd/: README.md
archive/snippets/convert_qwordbin2bcd/: README.md
archive/snippets/datetime/: README.md  datetime_conv.asm  meson.build
archive/snippets/datetime_daysinamonth/: README.md
archive/snippets/datetime_leapyear/: README.md
archive/snippets/datetime_semester/: README.md
archive/snippets/string/: meson.build  string_case.asm
archive/snippets/system/: ftok.asm  meson.build  pagesize.asm  sleep.asm
archive/snippets/system_sleep/: README.md
archive/todo/: meson.build
archive/todo/bioritme/: meson.build
archive/todo/compressing/: README.md  meson.build
archive/todo/fpulib/: meson.build
archive/todo/hexdump/: meson.build
archive/todo/memfd/: meson.build
archive/todo/mersenne-twister/: README.md  meson.build
archive/todo/mouse-programming/: README.md  meson.build
archive/todo/openssl-examples-master/: meson.build
archive/todo/quadraticequations/: README.md  meson.build
archive/todo/sudoku/: meson.build
lab/examples/ipc/: README.md  meson.build
lab/snippets/system/: meson.build
meson/: ARCHITECTURE.md  STYLE.md  build.sh  meson.build  meson_testall.sh
meson/arch/: meson.build
meson/arch/arm/: meson.build
meson/arch/riscv64/: meson.build
meson/arch/x86_64/: meson.build
meson/cross/: aarch64.ini  aarch64.txt  mips.ini  mips.txt  riscv64.txt  x86_64.txt
meson/include/: README.md  oop.h
meson/include/oop/: class.h  delete.h  macros.h  new.h  object.h  oop.h  rtti.h  runtime.h  vcall.h  vtable.h
(+681 files in other folders)
