# functions/meson.build
subdir('convert.bytebin2hexascii')
subdir('convert.wordbcd2ascii')
subdir('system.sleep')
subdir('convert.dwordbin2bcd')
subdir('convert.bytebcd2bin')
subdir('convert.dwordbcd2bin')
subdir('convert.wordbin2hexascii')
subdir('convert.qwordbcd2ascii')
subdir('convert.qwordbcd2bin')
subdir('string.toupper')
subdir('convert.bytebcd2ascii')
subdir('datetime.daysinamonth')
subdir('convert.wordbin2bcd')
subdir('datetime.quadrimester')
subdir('convert.wordbcd2bin')
subdir('datetime.leapyear')
subdir('system.pagesize')
subdir('convert.dwordbin2hexascii')
subdir('convert.bytebin2bcd')
subdir('convert.dwordbcd2ascii')
subdir('datetime.semester')
subdir('convert.qwordbin2hexascii')
subdir('convert.nibblebcd2bin')
subdir('datetime.weekend')
subdir('string.switchcase')
subdir('datetime.trimester')
subdir('convert.nibblebin2hexascii')
subdir('system..ftok')
subdir('convert.nibblebcd2ascii')
subdir('convert.nibblebin2bcd')
subdir('convert.qwordbin2bcd')
subdir('string.tolower')
subdir('datetime.shiftedmonth')
