# todo/meson.build
subdir('quadraticequations')
subdir('hexdump')
subdir('memfd')
subdir('optimization-examples')
subdir('mersenne-twister')
subdir('bluetooth')
subdir('bioritme')
subdir('mmx-demo')
subdir('fpulib')
subdir('openssl-examples-master')
subdir('cracks')
subdir('compressing')
subdir('mouse-programming')
subdir('sudoku')
subdir('fastnoise')
