# examples/basics/meson.build
subdir('printenv')
subdir('waitforkeypress')
subdir('uuid')
subdir('cpuid')
subdir('arguments')
subdir('dealcards')
subdir('readfile')
subdir('rotatebits')
subdir('hello')
subdir('dirinfo')
subdir('keyfilter')
subdir('palindrome')
subdir('winsize')
subdir('waitforenterkeypress')
subdir('cwd')
subdir('inputdemo')
