# snippets/convert/meson.build
subdir('wordbin2bcd')
subdir('nibblebin2hexascii')
subdir('bytebin2hexascii')
subdir('bytebcd2bin')
subdir('wordbcd2bin')
subdir('nibblebin2bcd')
subdir('nibblebcd2bin')
subdir('dwordbin2hexascii')
subdir('wordbcd2ascii')
subdir('wordbin2hexascii')
subdir('dwordbcd2bin')
subdir('dwordbcd2ascii')
subdir('nibblebcd2ascii')
subdir('qwordbcd2ascii')
subdir('dwordbin2bcd')
subdir('qwordbcd2bin')
subdir('qwordbin2bcd')
subdir('qwordbin2hexascii')
subdir('bytebin2bcd')
subdir('bytebcd2ascii')
