# examples/ipc/meson.build
subdir('Notify')
subdir('SIGFPE')
subdir('ForkDemo')
subdir('PipeDemo4')
subdir('PipeDemo2')
subdir('PipeDemo5')
subdir('Exeapp4')
subdir('Zip')
subdir('Exeapp1')
subdir('Unzip')
subdir('Exeapp2')
subdir('Exeapp3')
subdir('ExtXTerm')
subdir('PipeDemo3')
subdir('PipeDemo6')
subdir('PipeDemo1')
subdir('Threads')
